style/fsfeurope.css
/* ... */
div.actionbox p {
  margin: .3em 0;
  text-align: center;
  font-size: large;
  font-weight: bold;
}

div.actionbox a {
  display: block;
  margin: .3em 0;
  border-width: medium;
  border-style: solid;
  border-color: #666FA3 black black #666FA3;
  padding: .5em 1em;
  background: #202D79;
  color: white;
  text-align: center;
  font-size: large;
  font-weight: bold;
}

div.actionbox ul,
div.actionbox ol {
  margin: .3em 0;
  padding: 0;
}

div.actionbox li {
  list-style-position: inside;
}


/* ------------------------------------------------------------------------- */
/* Subpages menu                                                             */
/* ------------------------------------------------------------------------- */

h2#subpages,
h3#subpages,
h4#subpages {
	display: none;
}

h2#subpages.show-heading,
h3#subpages.show-heading,
h4#subpages.show-heading {
	display: block;
}

ul#subpages,
h2#subpages + ul,
h3#subpages + ul,
h4#subpages + ul {
	margin: 2em 0 2em 0;
	list-style-type: none;
	padding: 0 1em;
}

ul#subpages li,
h2#subpages + ul li,
h3#subpages + ul li,
h4#subpages + ul li {
	float: left;
	height: 6.8em;
	margin-bottom: .1em;
	padding-right: 3%;
	width: 47%;
}

ul#subpages li p,
h2#subpages + ul li p,
h3#subpages + ul li p,
h4#subpages + ul li p {
	font-size: 90%;
}


/* ------------------------------------------------------------------------- */
/* Footer                                                                    */
/* ------------------------------------------------------------------------- */

#footer {
  clear: both;
  color: rgb(120,120,120);
  font-size: 90%;
  line-height: 140%;
  min-height: 8em;
  padding-top: 2em;
}

#footer #notice {
  float: left;
  width: 70%;
}

#footer #notice ul {
  list-style: none;
  padding: 0;
}

#footer #notice ul li {
  display: inline;
  margin-right: .8em;
}

#footer #fsfnetwork {
	font-size: 110%;
	clear: left;
}

#footer #sister_organizations {
  float: right;
  width: 25%;
}

#footer #sister_organizations h2 {
  color: rgb(50,50,50);
  font-size: 100%;
  font-weight: normal;
  margin-top: 0;
  padding: 0;
}

#footer #sister_organizations ul {
  list-style: circle;
}


/* ------------------------------------------------------------------------- */
/* Footnotes                                                                 */
/* ------------------------------------------------------------------------- */
h2#fn {
	display: none;
}

h2#fn + ol {
	border-top: 1px solid #ccc;
	font-size: 90%;
	margin-top: 3em;
	padding-top: .5em;
	width: 30%;
}

h2#fn + ol li {
	width: 300%;
}

a.fn {
	bottom: .5em;
	font-size: 70%;
	position: relative;
}


/* ------------------------------------------------------------------------- */
/* Events calendar                                                           */
/* ------------------------------------------------------------------------- */
.event {
	margin: 0 0 1.5em 0;
	min-height: 7em;
	display: block;
}

.event h3 {
	margin-top: 0 !important;
	margin-left: 70px;
}

.event .date {
	color: #888;
	float: left;
	margin-top: -2em;
	padding-right: 10px;
	text-align: center;
	width: 60px;
}

.event .date .day,
.event .date .conjunction,
.event .date .month {
	display: block;
}

.event .date .conjunction {
	font-size: 90%;
}

.event .date .day {
	font-size: 150%;
}

.event .date .month {
	font-size: 100%;
}

.event .date.multiple .conjunction {
	color: #bebebe;
	display: block;
	margin: 0 0 .5em 0;
}

.event .details {
	margin-left: 70px;
}


/* ------------------------------------------------------------------------- */
/* Styles used only on some pages                                            */
/* ------------------------------------------------------------------------- */

/* News and events on front page */

#news,
#events {
	width: 49%;
}

#news h2,
#events h2 {
	text-align: center;
}

#news h3,
#events h3 {
	color: black;
}

#events h3 {
	font-size: 100%;
}

#news h3 {
	font-size: 120%;
}

#news .tools,
#events .tools {
	list-style: none;
	padding-left: 0;
	text-align: center;
}

#news {
	padding-right: 2%;
	float: left;
}

#events {
	float: right;
}

/* To avoid misplacements on the event page */
.clear {
	overflow: hidden;
	clear: both;
	height: 1px;
}

/* Project list */

th.projects {
  width: 20%;
}

td.projects {
  vertical-align: top;
}


/* Other stuff */

p.read_more {
	text-align: right;
}

a.feed {
	background-image: url("/graphics/icons/feed.png");
	background-repeat: no-repeat;
	background-position: 100% -1px !important;
	padding-right: 1.3em;
}

/* FIXME: replace with something else! */
.indent	{
  margin-right: 30px;
  margin-left: 40px;
}

p.footnote {
  margin-right: 30px;
  margin-left: 40px;
}

/* FIXME: this is probably not really code... */
code.footnote {
  font-weight: bold;
}

/* FIXME: Use <strong> instead */
span.emph {
   font-weight: bold;
}

ul.spaced li, ol.spaced li { /* Spaced listings, use this instead of <br /> */
	margin-bottom: 0.8em;
}

.background { /* For background information */
  margin-left: 1.5em;
  margin-right: 2em;
}

.aboutfsfe { /* For press release section "About the FSFE" */
  font-style: italic;
  margin-left: 2em;
}


/* Merchandise */
#merchandise {
  width: 100%;
}

#merchandise .image {
  padding-right: 1em;
  text-align: center;
}

#merchandise .description {
  vertical-align: top;
}

#merchandise .quantity {
  text-align: right;
  vertical-align: middle;
  width: 10%;
}

#merchandise .quantity p {
  margin: 0;
}

#merchandise .quantity input {
  vertical-align: middle;
}

#merchandise tr {
  border-bottom: 1px solid #f4f8fa;
  padding-bottom: 1.2em;
}


/* Overview pages */

ul.overview {
  list-style-type:none;
  margin: 0px;
  padding: 0px;
  padding-right: 25px;
  float:left;
  width:45%;
  }
  
  
/* People pages */

.people img {float:left;margin-right:10px;width:48px;height:48px;border:1px solid #000;}
ul.people {list-style-type:none;}
/* ... */

